<resources>
    <string name="app_name">Workout</string>
    <string name="man_flexing_muscles">Man flexing muscles</string>
    <string name="no_pain">No pain.</string>
    <string name="no_gain">No Gain.</string>
    <string name="lets_go">Lets Go</string>
    <string name="join_now">Join now</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">Username</string>
    <string name="enter_username_here">Enter username here</string>
    <string name="password">Password</string>
    <string name="enter_password_here">Enter password here</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_details_to_proceed">Please enter your details to proceed</string>
    <string name="please_enter_your_details_to_create_an_account">Please enter your details to create an account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_email_here">Enter email here</string>
    <string name="enter_username_email_here">Enter username/email here</string>
    <string name="workout">workout</string>
    <string name="kcal">kcal</string>
    <string name="week_goal">WEEK GOAL</string>
    <string name="minute">minute</string>
    <string name="confirm_password">Confirm password</string>
    <string name="abs_workout">abs workout</string>
    <string name="chest_workout">chest workout</string>
    <string name="legs_workout">legs workout</string>
    <string name="shoulder_workout">shoulder workout</string>
    <string name="arms_workout">arms workout</string>
    <string name="shirtless_man_training_abs_on_mat">shirtless man training abs on mat</string>
    <string name="muscular_man_doing_weight_lifting">muscular man doing weight lifting</string>
    <string name="sportsman_doing_squats_in_gym">sportsman doing squats in gym</string>
    <string name="strong_muscular_man_lifting_dumbbell">strong muscular man lifting dumbbell</string>
    <string name="medium_shot_man_stretching_arm">medium shot man stretching arm</string>
</resources>