<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/man_flexing_muscles"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNoPain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/no_pain"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNoGain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/no_gain"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>